For PR refactored