@@ -3,6 +3,7 @@ package faang.school.projectservice.controller.stage;
 import faang.school.projectservice.dto.stage.StageDto;
 import faang.school.projectservice.exception.DataValidationException;
 import faang.school.projectservice.service.stage.StageService;
+import io.micrometer.common.util.StringUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -17,7 +18,7 @@ public class StageController {
 
     private final StageService stageService;
 
-    @PostMapping("/project")
+    @PostMapping("/project")//поменяю когда договоримся о формате, в остальных тоже
     public StageDto createProjectStage(StageDto stageDto) {
         validateStageName(stageDto);
 
@@ -35,7 +36,7 @@ public class StageController {
     }
 
     private void validateStageName(StageDto stageDto) {
-        if (stageDto.getStageName() == null || stageDto.getStageName().isBlank()) {
+        if (StringUtils.isBlank(stageDto.getStageName())) {
             throw new DataValidationException("Stage name can't be blank or null");
         }
     }
